--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,38 @@
 
+<html>
+  <head>
+    <script src="https://apis.google.com/js/client.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script>
+     // var temp="";
+      function auth() {
+        var config = {
+          'client_id': '717885825615-f8c907cjdgf632c2js6el0v6p5huaolv.apps.googleusercontent.com',
+          'scope': 'https://www.google.com/m8/feeds'
+        };
+        gapi.auth.authorize(config, function() {
+          fetch(gapi.auth.getToken());
+        });
+      }
+      function fetch(token) {
+        $.ajax({
+          url: 'https://www.google.com/m8/feeds/contacts/default/full?alt=json',
+          dataType: 'json',
+          data: token
+        }).done(function(data) {
+           var  temp=JSON.stringify(data);
+            console.log(temp);
+            document.getElementById("dd1").innerHTML=JSON.stringify(temp);
+           
+          });
+      }
+    </script>
+  </head>
+
+  <body>
+    <button onclick="auth();">GET CONTACTS FEED</button>
+    <div>
+      <p id="dd1"></p>
+    </div>
+  </body>
+</html>
